[package]
name = "cargo-query"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.76"
homepage = "https://github.com/collinoc/cargo-query"
repository = "https://github.com/collinoc/cargo-query"
description = "Command-line crate registry index querying for Cargo"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"], optional = true }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.113"
ureq = "2.9.6"

[features]
default = ["cli"]
cli = ["clap"]
